# Luma-brain

./: .gitignore  ARCHITECTURE_ANALYSIS.md  Cargo.toml  Cargo_test.toml  FINAL_STATUS.md  GITHUB_UPLOAD.md  IMPLEMENTATION_PLAN.md  README.md  STATUS.md  demo.sh  integrate.sh  test_chemistry_v2.rs  test_modules.rs  ИТОГИ.md  КАК_ЗАГРУЗИТЬ.md  НАУЧНЫЙ_АНАЛИЗ.md  ПЛАН_УСЛОЖНЕНИЯ.md  СОЗНАНИЕ_ГОТОВО.md
apps/android/: README.md  build-android.sh
apps/android/neuro-tamagotchi-mobile/: index.html  package-lock.json  package.json
apps/android/neuro-tamagotchi-mobile/src/: main.ts  styles.css
apps/android/neuro-tamagotchi-mobile/src-tauri/: Cargo.toml  tauri.conf.json
apps/android/neuro-tamagotchi-mobile/src-tauri/src/: lib.rs  main.rs
brainwave_core/: Cargo.toml
brainwave_core/src/: brainwaves.rs  lib.rs  spiking.rs
brainwave_tamagotchi/: Cargo.toml
brainwave_tamagotchi/src/: main.rs  main.rs.backup
chemistry_module_v2/: Cargo.toml  README.md
consciousness_module/: Cargo.toml
consciousness_module/src/: gnw.rs  iit.rs  spatial_brain.rs
crates/apps/brainwave_tamagotchi/: Cargo.toml
crates/apps/brainwave_tamagotchi/src/: main.rs
crates/brain/consciousness_module/src/: lib.rs
crates/brain/neurogotchi_topology/: ARCHITECTURE.md  Cargo.toml
crates/brain/neurogotchi_topology/examples/: neuromodulation_demo.rs
crates/brain/neurogotchi_topology/src/: development.rs  topology.rs
crates/brain/wave_analyzer/src/: lib.rs
crates/core/brainwave_core/src/: learning.rs  vocabulary.rs  wave_network.rs
crates/interfaces/token_spike_interface/src/: encoder.rs  motor_output.rs
crates/modulation/chemistry_module/: Cargo.toml
crates/modulation/chemistry_module/src/: lib.rs
crates/modulation/chemistry_module_v2/src/: lib.rs
crates/modulation/memory_module/: Cargo.toml
crates/modulation/neuromodulation/: Cargo.toml
crates/modulation/neuromodulation/src/: circadian.rs  lib.rs  modulators.rs  sleep.rs
crates/modulation/speech_module/: Cargo.toml
crates/modulation/thought_module/: Cargo.toml
memory_module/src/: lib.rs
neurogotchi_topology/: Cargo.toml
neurogotchi_topology/examples/: integration_demo.rs
neurogotchi_topology/src/: connection.rs  innate.rs  layer.rs  lib.rs
neuromodulation/src/: adenosine.rs
speech_module/src/: lib.rs
thought_module/src/: lib.rs
token_spike_interface/: Cargo.toml  README.md
token_spike_interface/src/: decoder.rs  lib.rs  patterns.rs  resonance.rs  sensory_input.rs  thought_stream.rs
wave_analyzer/: Cargo.toml
web_shell/: app.py  server.py
