[workspace]
members = [
    "brainwave_core",
    "speech_module",
    "memory_module",
    "thought_module",
    "chemistry_module",
    "chemistry_module_v2",
    "wave_analyzer",
    "consciousness_module",
    "brainwave_tamagotchi",
    "apps/android/neuro-tamagotchi-mobile/src-tauri"
, "token_spike_interface", "neurogotchi_topology"]
resolver = "2"

[workspace.dependencies]
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
