[workspace]
members = [
    # Core
    "crates/core/brainwave_core",

    # Interfaces
    "crates/interfaces/token_spike_interface",

    # Brain
    "crates/brain/neurogotchi_topology",
    "crates/brain/consciousness_module",
    "crates/brain/wave_analyzer",

    # Modulation
    "crates/modulation/neuromodulation",
    "crates/modulation/chemistry_module",
    "crates/modulation/chemistry_module_v2",
    "crates/modulation/speech_module",
    "crates/modulation/memory_module",
    "crates/modulation/thought_module",

    # Apps
    "crates/apps/brainwave_tamagotchi",
    "apps/android/neuro-tamagotchi-mobile/src-tauri",
]
resolver = "2"

[workspace.dependencies]
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
