[package]
name = "brainwave_tamagotchi"
version = "0.1.0"
edition = "2021"

[dependencies]
brainwave_core = { path = "../brainwave_core" }
speech_module = { path = "../speech_module" }
memory_module = { path = "../memory_module" }
thought_module = { path = "../thought_module" }
chemistry_module = { path = "../chemistry_module" }
wave_analyzer = { path = "../wave_analyzer" }
consciousness_module = { path = "../consciousness_module" }
rand = { workspace = true }
ratatui = "0.28"
crossterm = "0.28"
serde = { workspace = true }
serde_json = { workspace = true }
