[package]
name = "neurogotchi_topology"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
brainwave_core = { path = "../../core/brainwave_core" }
token_spike_interface = { path = "../../interfaces/token_spike_interface" }

[dev-dependencies]
