[package]
name = "neuro-tamagotchi-mobile"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "neuro_tamagotchi_mobile_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8"

# Модули мозга из родительского проекта
brainwave_core = { path = "../../../../brainwave_core" }
speech_module = { path = "../../../../speech_module" }
memory_module = { path = "../../../../memory_module" }
thought_module = { path = "../../../../thought_module" }
chemistry_module = { path = "../../../../chemistry_module" }
wave_analyzer = { path = "../../../../wave_analyzer" }
consciousness_module = { path = "../../../../consciousness_module" }

